final_work/src/parser.output
Terminals unused in grammar

    L_BRACE
    R_BRACE
    SQRT


State 229 conflicts: 2 reduce/reduce


Grammar

    0 $accept: pascal_program $end

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block DOT

    2 program_headingopt: L_PAREN identifier_list R_PAREN
    3                   | empty

    4 identifier_list: identifier
    5                | identifier_list COMMA identifier

    6 block: block1
    7      | label_declaration SEMICOLON block1

    8 block1: block2
    9       | constant_declaration SEMICOLON block2

   10 block2: block3
   11       | type_declaration SEMICOLON block3

   12 block3: block4
   13       | variable_declaration SEMICOLON block4

   14 block4: block5
   15       | proc_and_func_declaration SEMICOLON block5

   16 block5: BEGIN_TOK statement_list END

   17 label_declaration: LABEL unsigned_integer
   18                  | label_declaration COMMA unsigned_integer

   19 constant_declaration: CONST constid EQ constant
   20                     | constant_declaration SEMICOLON constid EQ constant

   21 type_declaration: TYPE typeid EQ type
   22                 | type_declaration SEMICOLON typeid EQ type

   23 variable_declaration: VAR variableid_list COLON type
   24                     | variable_declaration SEMICOLON variableid_list COLON type

   25 variableid_list: identifier
   26                | variableid_list COMMA identifier

   27 constant: integer_literal
   28         | real_literal
   29         | string_literal
   30         | char_literal
   31         | boolean_literal
   32         | constid
   33         | PLUS constid
   34         | MINUS constid

   35 type: simple_type
   36     | structured_type
   37     | CARET typeid

   38 simple_type: L_PAREN identifier_list R_PAREN
   39            | constant DOTDOT constant
   40            | typeid

   41 structured_type: unpacked_structured_type
   42                | PACKED unpacked_structured_type

   43 unpacked_structured_type: ARRAY L_BRACKET index_list R_BRACKET OF type
   44                         | RECORD field_list END
   45                         | SET OF simple_type
   46                         | FILE_TOK
   47                         | FILE_TOK OF type

   48 index_list: simple_type
   49           | index_list COMMA simple_type

   50 field_list: fixed_part
   51           | fixed_part SEMICOLON variant_part
   52           | variant_part
   53           | empty

   54 fixed_part: record_field
   55           | fixed_part SEMICOLON record_field

   56 record_field: empty
   57             | fieldid_list COLON type

   58 fieldid_list: fieldid
   59             | fieldid_list COMMA fieldid

   60 variant_part: CASE tag_field OF variant_list

   61 tag_field: typeid
   62          | identifier COLON typeid

   63 variant_list: variant
   64             | variant_list SEMICOLON variant

   65 variant: empty
   66        | case_label_list COLON L_PAREN field_list R_PAREN

   67 proc_and_func_declaration: proc_or_func
   68                          | proc_and_func_declaration SEMICOLON proc_or_func

   69 proc_or_func: PROCEDURE procid parameters SEMICOLON block_or_forward
   70             | FUNCTION funcid parameters COLON typeid SEMICOLON block_or_forward

   71 block_or_forward: block
   72                 | FORWARD

   73 parameters: L_PAREN formal_parameter_list R_PAREN

   74 formal_parameter_list: formal_parameter_section
   75                      | formal_parameter_list SEMICOLON formal_parameter_section

   76 formal_parameter_section: parameterid_list COLON typeid
   77                         | VAR parameterid_list COLON typeid
   78                         | PROCEDURE identifier parameters
   79                         | FUNCTION identifier parameters COLON typeid

   80 parameterid_list: identifier
   81                 | parameterid_list COMMA identifier

   82 statement_list: statement
   83               | statement_list SEMICOLON optional_statement

   84 optional_statement: statement
   85                   | empty

   86 statement: variable ASSIGN expression
   87          | BEGIN_TOK statement_list END
   88          | IF expression THEN statement
   89          | IF expression THEN statement ELSE statement
   90          | CASE expression OF case_list END
   91          | CASE expression OF case_list SEMICOLON case_else END
   92          | WHILE expression DO statement
   93          | REPEAT statement_list UNTIL expression
   94          | FOR varid ASSIGN for_list DO statement
   95          | procid
   96          | procid L_PAREN optional_expression_list R_PAREN
   97          | GOTO label
   98          | WITH record_variable_list DO statement
   99          | label COLON statement

  100 variable: varid
  101         | variable L_BRACKET subscript_list R_BRACKET
  102         | variable DOT fieldid
  103         | variable CARET

  104 subscript_list: expression
  105               | subscript_list COMMA expression

  106 case_list: case_item
  107          | case_list SEMICOLON case_item

  108 case_item: case_label_list COLON statement

  109 case_label_list: case_label
  110                | case_label_list COMMA case_label

  111 case_label: constant
  112           | constant DOTDOT constant

  113 case_else: ELSE statement SEMICOLON

  114 for_list: expression TO expression
  115         | expression DOWNTO expression

  116 optional_expression_list: empty
  117                         | expression_list

  118 expression_list: expression
  119                | expression_list COMMA expression

  120 label: unsigned_integer

  121 record_variable_list: variable
  122                     | record_variable_list COMMA variable

  123 expression: expression LT additive_expression
  124           | expression LTE additive_expression
  125           | expression EQ additive_expression
  126           | expression NEQ additive_expression
  127           | expression GTE additive_expression
  128           | expression GT additive_expression
  129           | additive_expression

  130 additive_expression: additive_expression PLUS multiplicative_expression
  131                    | additive_expression MINUS multiplicative_expression
  132                    | additive_expression OR multiplicative_expression
  133                    | multiplicative_expression

  134 multiplicative_expression: multiplicative_expression TIMES unary_expression
  135                          | multiplicative_expression DIVIDE unary_expression
  136                          | multiplicative_expression DIV unary_expression
  137                          | multiplicative_expression MOD unary_expression
  138                          | multiplicative_expression AND unary_expression
  139                          | multiplicative_expression IN unary_expression
  140                          | unary_expression

  141 unary_expression: PLUS unary_expression
  142                 | MINUS unary_expression
  143                 | NOT unary_expression
  144                 | primary_expression

  145 primary_expression: variable
  146                   | unsigned_integer
  147                   | unsigned_real
  148                   | string_literal
  149                   | char_literal
  150                   | NIL
  151                   | funcid L_PAREN optional_expression_list R_PAREN
  152                   | L_BRACKET element_list R_BRACKET
  153                   | L_PAREN expression R_PAREN

  154 element_list: empty
  155             | element_list_non_empty

  156 element_list_non_empty: element
  157                       | element_list_non_empty COMMA element

  158 element: expression
  159        | expression DOTDOT expression

  160 constid: identifier

  161 typeid: CHAR
  162       | BOOLEAN
  163       | INTEGER
  164       | REAL
  165       | STRING
  166       | identifier

  167 funcid: identifier
  168       | CHR

  169 procid: identifier
  170       | WRITE
  171       | WRITELN
  172       | READ
  173       | READLN

  174 fieldid: identifier

  175 varid: identifier

  176 identifier: IDENTIFIER

  177 unsigned_integer: INTEGER_LITERAL

  178 unsigned_real: REAL_LITERAL

  179 integer_literal: INTEGER_LITERAL

  180 real_literal: REAL_LITERAL

  181 string_literal: STRING_LITERAL

  182 char_literal: CHAR_LITERAL

  183 boolean_literal: BOOLEAN_LITERAL

  184 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 1
    VAR (259) 23 77
    CONST (260) 19
    TYPE (261) 21
    LABEL (262) 17
    PROCEDURE (263) 69 78
    FUNCTION (264) 70 79
    BEGIN_TOK (265) 16 87
    END (266) 16 44 87 90 91
    IF (267) 88 89
    THEN (268) 88 89
    ELSE (269) 89 113
    NIL (270) 150
    WITH (271) 98
    FORWARD (272) 72
    PACKED (273) 42
    WHILE (274) 92
    DO (275) 92 94 98
    FOR (276) 94
    TO (277) 114
    DOWNTO (278) 115
    REPEAT (279) 93
    UNTIL (280) 93
    CASE (281) 60 90 91
    OF (282) 43 45 47 60 90 91
    GOTO (283) 97
    INTEGER (284) 163
    REAL (285) 164
    BOOLEAN (286) 162
    CHAR (287) 161
    ARRAY (288) 43
    RECORD (289) 44
    SET (290) 45
    FILE_TOK (291) 46 47
    STRING (292) 165
    READ (293) 172
    WRITE (294) 170
    READLN (295) 173
    WRITELN (296) 171
    CHR (297) 168
    GT (298) 128
    GTE (299) 127
    LT (300) 123
    LTE (301) 124
    NEQ (302) 126
    EQ (303) 19 20 21 22 125
    AND (304) 138
    OR (305) 132
    NOT (306) 143
    PLUS (307) 33 130 141
    MINUS (308) 34 131 142
    TIMES (309) 134
    DIVIDE (310) 135
    DIV (311) 136
    MOD (312) 137
    DOT (313) 1 102
    DOTDOT (314) 39 112 159
    CARET (315) 37 103
    ASSIGN (316) 86 94
    SEMICOLON (317) 1 7 9 11 13 15 20 22 24 51 55 64 68 69 70 75 83 91 107 113
    COMMA (318) 5 18 26 49 59 81 105 110 119 122 157
    COLON (319) 23 24 57 62 66 70 76 77 79 99 108
    L_PAREN (320) 2 38 66 73 96 151 153
    R_PAREN (321) 2 38 66 73 96 151 153
    L_BRACE (322)
    R_BRACE (323)
    L_BRACKET (324) 43 101 152
    R_BRACKET (325) 43 101 152
    CHAR_LITERAL <character> (326) 182
    INTEGER_LITERAL <integer> (327) 177 179
    REAL_LITERAL <number> (328) 178 180
    BOOLEAN_LITERAL <boolean> (329) 183
    IDENTIFIER <string> (330) 1 176
    STRING_LITERAL <string> (331) 181
    SQRT (332)
    NEG (333)
    IN (334) 139
    LOWER_THAN_ELSE (335)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    pascal_program <node> (82)
        on left: 1
        on right: 0
    program_headingopt <node> (83)
        on left: 2 3
        on right: 1
    identifier_list <node> (84)
        on left: 4 5
        on right: 2 5 38
    block <node> (85)
        on left: 6 7
        on right: 1 71
    block1 <node> (86)
        on left: 8 9
        on right: 6 7
    block2 <node> (87)
        on left: 10 11
        on right: 8 9
    block3 <node> (88)
        on left: 12 13
        on right: 10 11
    block4 <node> (89)
        on left: 14 15
        on right: 12 13
    block5 <node> (90)
        on left: 16
        on right: 14 15
    label_declaration <node> (91)
        on left: 17 18
        on right: 7 18
    constant_declaration <node> (92)
        on left: 19 20
        on right: 9 20
    type_declaration <node> (93)
        on left: 21 22
        on right: 11 22
    variable_declaration <node> (94)
        on left: 23 24
        on right: 13 24
    variableid_list <node> (95)
        on left: 25 26
        on right: 23 24 26
    constant <node> (96)
        on left: 27 28 29 30 31 32 33 34
        on right: 19 20 39 111 112
    type <node> (97)
        on left: 35 36 37
        on right: 21 22 23 24 43 47 57
    simple_type <node> (98)
        on left: 38 39 40
        on right: 35 45 48 49
    structured_type <node> (99)
        on left: 41 42
        on right: 36
    unpacked_structured_type <node> (100)
        on left: 43 44 45 46 47
        on right: 41 42
    index_list <node> (101)
        on left: 48 49
        on right: 43 49
    field_list <node> (102)
        on left: 50 51 52 53
        on right: 44 66
    fixed_part <node> (103)
        on left: 54 55
        on right: 50 51 55
    record_field <node> (104)
        on left: 56 57
        on right: 54 55
    fieldid_list <node> (105)
        on left: 58 59
        on right: 57 59
    variant_part <node> (106)
        on left: 60
        on right: 51 52
    tag_field <node> (107)
        on left: 61 62
        on right: 60
    variant_list <node> (108)
        on left: 63 64
        on right: 60 64
    variant <node> (109)
        on left: 65 66
        on right: 63 64
    proc_and_func_declaration <node> (110)
        on left: 67 68
        on right: 15 68
    proc_or_func <node> (111)
        on left: 69 70
        on right: 67 68
    block_or_forward <node> (112)
        on left: 71 72
        on right: 69 70
    parameters <node> (113)
        on left: 73
        on right: 69 70 78 79
    formal_parameter_list <node> (114)
        on left: 74 75
        on right: 73 75
    formal_parameter_section <node> (115)
        on left: 76 77 78 79
        on right: 74 75
    parameterid_list <node> (116)
        on left: 80 81
        on right: 76 77 81
    statement_list <node> (117)
        on left: 82 83
        on right: 16 83 87 93
    optional_statement <node> (118)
        on left: 84 85
        on right: 83
    statement <node> (119)
        on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99
        on right: 82 84 88 89 92 94 98 99 108 113
    variable <node> (120)
        on left: 100 101 102 103
        on right: 86 101 102 103 121 122 145
    subscript_list <node> (121)
        on left: 104 105
        on right: 101 105
    case_list <node> (122)
        on left: 106 107
        on right: 90 91 107
    case_item <node> (123)
        on left: 108
        on right: 106 107
    case_label_list <node> (124)
        on left: 109 110
        on right: 66 108 110
    case_label <node> (125)
        on left: 111 112
        on right: 109 110
    case_else <node> (126)
        on left: 113
        on right: 91
    for_list <node> (127)
        on left: 114 115
        on right: 94
    optional_expression_list <node> (128)
        on left: 116 117
        on right: 96 151
    expression_list <node> (129)
        on left: 118 119
        on right: 117 119
    label <node> (130)
        on left: 120
        on right: 97 99
    record_variable_list <node> (131)
        on left: 121 122
        on right: 98 122
    expression <node> (132)
        on left: 123 124 125 126 127 128 129
        on right: 86 88 89 90 91 92 93 104 105 114 115 118 119 123 124 125 126 127 128 153 158 159
    additive_expression <node> (133)
        on left: 130 131 132 133
        on right: 123 124 125 126 127 128 129 130 131 132
    multiplicative_expression <node> (134)
        on left: 134 135 136 137 138 139 140
        on right: 130 131 132 133 134 135 136 137 138 139
    unary_expression <node> (135)
        on left: 141 142 143 144
        on right: 134 135 136 137 138 139 140 141 142 143
    primary_expression <node> (136)
        on left: 145 146 147 148 149 150 151 152 153
        on right: 144
    element_list <node> (137)
        on left: 154 155
        on right: 152
    element_list_non_empty <node> (138)
        on left: 156 157
        on right: 155 157
    element <node> (139)
        on left: 158 159
        on right: 156 157
    constid <node> (140)
        on left: 160
        on right: 19 20 32 33 34
    typeid <node> (141)
        on left: 161 162 163 164 165 166
        on right: 21 22 37 40 61 62 70 76 77 79
    funcid <node> (142)
        on left: 167 168
        on right: 70 151
    procid <node> (143)
        on left: 169 170 171 172 173
        on right: 69 95 96
    fieldid <node> (144)
        on left: 174
        on right: 58 59 102
    varid <node> (145)
        on left: 175
        on right: 94 100
    identifier <node> (146)
        on left: 176
        on right: 4 5 25 26 62 78 79 80 81 160 166 167 169 174 175
    unsigned_integer <node> (147)
        on left: 177
        on right: 17 18 120 146
    unsigned_real <node> (148)
        on left: 178
        on right: 147
    integer_literal <node> (149)
        on left: 179
        on right: 27
    real_literal <node> (150)
        on left: 180
        on right: 28
    string_literal <node> (151)
        on left: 181
        on right: 29 148
    char_literal <node> (152)
        on left: 182
        on right: 30 149
    boolean_literal <node> (153)
        on left: 183
        on right: 31
    empty <node> (154)
        on left: 184
        on right: 3 53 56 65 85 116 154


State 0

    0 $accept: • pascal_program $end

    PROGRAM  shift, and go to state 1

    pascal_program  go to state 2


State 1

    1 pascal_program: PROGRAM • IDENTIFIER program_headingopt SEMICOLON block DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: pascal_program • $end

    $end  shift, and go to state 4


State 3

    1 pascal_program: PROGRAM IDENTIFIER • program_headingopt SEMICOLON block DOT

    L_PAREN  shift, and go to state 5

    $default  reduce using rule 184 (empty)

    program_headingopt  go to state 6
    empty               go to state 7


State 4

    0 $accept: pascal_program $end •

    $default  accept


State 5

    2 program_headingopt: L_PAREN • identifier_list R_PAREN

    IDENTIFIER  shift, and go to state 8

    identifier_list  go to state 9
    identifier       go to state 10


State 6

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt • SEMICOLON block DOT

    SEMICOLON  shift, and go to state 11


State 7

    3 program_headingopt: empty •

    $default  reduce using rule 3 (program_headingopt)


State 8

  176 identifier: IDENTIFIER •

    $default  reduce using rule 176 (identifier)


State 9

    2 program_headingopt: L_PAREN identifier_list • R_PAREN
    5 identifier_list: identifier_list • COMMA identifier

    COMMA    shift, and go to state 12
    R_PAREN  shift, and go to state 13


State 10

    4 identifier_list: identifier •

    $default  reduce using rule 4 (identifier_list)


State 11

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON • block DOT

    VAR        shift, and go to state 14
    CONST      shift, and go to state 15
    TYPE       shift, and go to state 16
    LABEL      shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block                      go to state 21
    block1                     go to state 22
    block2                     go to state 23
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    label_declaration          go to state 27
    constant_declaration       go to state 28
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32


State 12

    5 identifier_list: identifier_list COMMA • identifier

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 33


State 13

    2 program_headingopt: L_PAREN identifier_list R_PAREN •

    $default  reduce using rule 2 (program_headingopt)


State 14

   23 variable_declaration: VAR • variableid_list COLON type

    IDENTIFIER  shift, and go to state 8

    variableid_list  go to state 34
    identifier       go to state 35


State 15

   19 constant_declaration: CONST • constid EQ constant

    IDENTIFIER  shift, and go to state 8

    constid     go to state 36
    identifier  go to state 37


State 16

   21 type_declaration: TYPE • typeid EQ type

    INTEGER     shift, and go to state 38
    REAL        shift, and go to state 39
    BOOLEAN     shift, and go to state 40
    CHAR        shift, and go to state 41
    STRING      shift, and go to state 42
    IDENTIFIER  shift, and go to state 8

    typeid      go to state 43
    identifier  go to state 44


State 17

   17 label_declaration: LABEL • unsigned_integer

    INTEGER_LITERAL  shift, and go to state 45

    unsigned_integer  go to state 46


State 18

   69 proc_or_func: PROCEDURE • procid parameters SEMICOLON block_or_forward

    READ        shift, and go to state 47
    WRITE       shift, and go to state 48
    READLN      shift, and go to state 49
    WRITELN     shift, and go to state 50
    IDENTIFIER  shift, and go to state 8

    procid      go to state 51
    identifier  go to state 52


State 19

   70 proc_or_func: FUNCTION • funcid parameters COLON typeid SEMICOLON block_or_forward

    CHR         shift, and go to state 53
    IDENTIFIER  shift, and go to state 8

    funcid      go to state 54
    identifier  go to state 55


State 20

   16 block5: BEGIN_TOK • statement_list END

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 64
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 21

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block • DOT

    DOT  shift, and go to state 72


State 22

    6 block: block1 •

    $default  reduce using rule 6 (block)


State 23

    8 block1: block2 •

    $default  reduce using rule 8 (block1)


State 24

   10 block2: block3 •

    $default  reduce using rule 10 (block2)


State 25

   12 block3: block4 •

    $default  reduce using rule 12 (block3)


State 26

   14 block4: block5 •

    $default  reduce using rule 14 (block4)


State 27

    7 block: label_declaration • SEMICOLON block1
   18 label_declaration: label_declaration • COMMA unsigned_integer

    SEMICOLON  shift, and go to state 73
    COMMA      shift, and go to state 74


State 28

    9 block1: constant_declaration • SEMICOLON block2
   20 constant_declaration: constant_declaration • SEMICOLON constid EQ constant

    SEMICOLON  shift, and go to state 75


State 29

   11 block2: type_declaration • SEMICOLON block3
   22 type_declaration: type_declaration • SEMICOLON typeid EQ type

    SEMICOLON  shift, and go to state 76


State 30

   13 block3: variable_declaration • SEMICOLON block4
   24 variable_declaration: variable_declaration • SEMICOLON variableid_list COLON type

    SEMICOLON  shift, and go to state 77


State 31

   15 block4: proc_and_func_declaration • SEMICOLON block5
   68 proc_and_func_declaration: proc_and_func_declaration • SEMICOLON proc_or_func

    SEMICOLON  shift, and go to state 78


State 32

   67 proc_and_func_declaration: proc_or_func •

    $default  reduce using rule 67 (proc_and_func_declaration)


State 33

    5 identifier_list: identifier_list COMMA identifier •

    $default  reduce using rule 5 (identifier_list)


State 34

   23 variable_declaration: VAR variableid_list • COLON type
   26 variableid_list: variableid_list • COMMA identifier

    COMMA  shift, and go to state 79
    COLON  shift, and go to state 80


State 35

   25 variableid_list: identifier •

    $default  reduce using rule 25 (variableid_list)


State 36

   19 constant_declaration: CONST constid • EQ constant

    EQ  shift, and go to state 81


State 37

  160 constid: identifier •

    $default  reduce using rule 160 (constid)


State 38

  163 typeid: INTEGER •

    $default  reduce using rule 163 (typeid)


State 39

  164 typeid: REAL •

    $default  reduce using rule 164 (typeid)


State 40

  162 typeid: BOOLEAN •

    $default  reduce using rule 162 (typeid)


State 41

  161 typeid: CHAR •

    $default  reduce using rule 161 (typeid)


State 42

  165 typeid: STRING •

    $default  reduce using rule 165 (typeid)


State 43

   21 type_declaration: TYPE typeid • EQ type

    EQ  shift, and go to state 82


State 44

  166 typeid: identifier •

    $default  reduce using rule 166 (typeid)


State 45

  177 unsigned_integer: INTEGER_LITERAL •

    $default  reduce using rule 177 (unsigned_integer)


State 46

   17 label_declaration: LABEL unsigned_integer •

    $default  reduce using rule 17 (label_declaration)


State 47

  172 procid: READ •

    $default  reduce using rule 172 (procid)


State 48

  170 procid: WRITE •

    $default  reduce using rule 170 (procid)


State 49

  173 procid: READLN •

    $default  reduce using rule 173 (procid)


State 50

  171 procid: WRITELN •

    $default  reduce using rule 171 (procid)


State 51

   69 proc_or_func: PROCEDURE procid • parameters SEMICOLON block_or_forward

    L_PAREN  shift, and go to state 83

    parameters  go to state 84


State 52

  169 procid: identifier •

    $default  reduce using rule 169 (procid)


State 53

  168 funcid: CHR •

    $default  reduce using rule 168 (funcid)


State 54

   70 proc_or_func: FUNCTION funcid • parameters COLON typeid SEMICOLON block_or_forward

    L_PAREN  shift, and go to state 83

    parameters  go to state 85


State 55

  167 funcid: identifier •

    $default  reduce using rule 167 (funcid)


State 56

   87 statement: BEGIN_TOK • statement_list END

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 86
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 57

   88 statement: IF • expression THEN statement
   89          | IF • expression THEN statement ELSE statement

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 97
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 58

   98 statement: WITH • record_variable_list DO statement

    IDENTIFIER  shift, and go to state 8

    variable              go to state 108
    record_variable_list  go to state 109
    varid                 go to state 69
    identifier            go to state 110


State 59

   92 statement: WHILE • expression DO statement

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 111
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 60

   94 statement: FOR • varid ASSIGN for_list DO statement

    IDENTIFIER  shift, and go to state 8

    varid       go to state 112
    identifier  go to state 110


State 61

   93 statement: REPEAT • statement_list UNTIL expression

    BEGIN_TOK        shift, and go to state 56
    IF               shift, and go to state 57
    WITH             shift, and go to state 58
    WHILE            shift, and go to state 59
    FOR              shift, and go to state 60
    REPEAT           shift, and go to state 61
    CASE             shift, and go to state 62
    GOTO             shift, and go to state 63
    READ             shift, and go to state 47
    WRITE            shift, and go to state 48
    READLN           shift, and go to state 49
    WRITELN          shift, and go to state 50
    INTEGER_LITERAL  shift, and go to state 45
    IDENTIFIER       shift, and go to state 8

    statement_list    go to state 113
    statement         go to state 65
    variable          go to state 66
    label             go to state 67
    procid            go to state 68
    varid             go to state 69
    identifier        go to state 70
    unsigned_integer  go to state 71


State 62

   90 statement: CASE • expression OF case_list END
   91          | CASE • expression OF case_list SEMICOLON case_else END

    NIL              shift, and go to state 87
    CHR              shift, and go to state 53
    NOT              shift, and go to state 88
    PLUS             shift, and go to state 89
    MINUS            shift, and go to state 90
    L_PAREN          shift, and go to state 91
    L_BRACKET        shift, and go to state 92
    CHAR_LITERAL     shift, and go to state 93
    INTEGER_LITERAL  shift, and go to state 45
    REAL_LITERAL     shift, and go to state 94
    IDENTIFIER       shift, and go to state 8
    STRING_LITERAL   shift, and go to state 95

    variable                   go to state 96
    expression                 go to state 114
    additive_expression        go to state 98
    multiplicative_expression  go to state 99
    unary_expression           go to state 100
    primary_expression         go to state 101
    funcid                     go to state 102
    varid                      go to state 69
    identifier                 go to state 103
    unsigned_integer           go to state 104
    unsigned_real              go to state 105
    string_literal             go to state 106
    char_literal               go to state 107


State 63

   97 statement: GOTO • label

    INTEGER_LITERAL  shift, and go to state 45

    label             go to state 115
    unsigned_integer  go to state 71


State 64

   16 block5: BEGIN_TOK statement_list • END
   83 statement_list: statement_list • SEMICOLON optional_statement

    END        shift, and go to state 116
    SEMICOLON  shift, and go to state 117


State 65

   82 statement_list: statement •

    $default  reduce using rule 82 (statement_list)


State 66

   86 statement: variable • ASSIGN expression
  101 variable: variable • L_BRACKET subscript_list R_BRACKET
  102         | variable • DOT fieldid
  103         | variable • CARET

    DOT        shift, and go to state 118
    CARET      shift, and go to state 119
    ASSIGN     shift, and go to state 120
    L_BRACKET  shift, and go to state 121


State 67

   99 statement: label • COLON statement

    COLON  shift, and go to state 122


State 68

   95 statement: procid •
   96          | procid • L_PAREN optional_expression_list R_PAREN

    L_PAREN  shift, and go to state 123

    $default  reduce using rule 95 (statement)


State 69

  100 variable: varid •

    $default  reduce using rule 100 (variable)


State 70

  169 procid: identifier •
  175 varid: identifier •

    DOT        reduce using rule 175 (varid)
    CARET      reduce using rule 175 (varid)
    ASSIGN     reduce using rule 175 (varid)
    L_BRACKET  reduce using rule 175 (varid)
    $default   reduce using rule 169 (procid)


State 71

  120 label: unsigned_integer •

    $default  reduce using rule 120 (label)


State 72

    1 pascal_program: PROGRAM IDENTIFIER program_headingopt SEMICOLON block DOT •

    $default  reduce using rule 1 (pascal_program)


State 73

    7 block: label_declaration SEMICOLON • block1

    VAR        shift, and go to state 14
    CONST      shift, and go to state 15
    TYPE       shift, and go to state 16
    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block1                     go to state 124
    block2                     go to state 23
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    constant_declaration       go to state 28
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32


State 74

   18 label_declaration: label_declaration COMMA • unsigned_integer

    INTEGER_LITERAL  shift, and go to state 45

    unsigned_integer  go to state 125


State 75

    9 block1: constant_declaration SEMICOLON • block2
   20 constant_declaration: constant_declaration SEMICOLON • constid EQ constant

    VAR         shift, and go to state 14
    TYPE        shift, and go to state 16
    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    IDENTIFIER  shift, and go to state 8

    block2                     go to state 126
    block3                     go to state 24
    block4                     go to state 25
    block5                     go to state 26
    type_declaration           go to state 29
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    constid                    go to state 127
    identifier                 go to state 37


State 76

   11 block2: type_declaration SEMICOLON • block3
   22 type_declaration: type_declaration SEMICOLON • typeid EQ type

    VAR         shift, and go to state 14
    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    INTEGER     shift, and go to state 38
    REAL        shift, and go to state 39
    BOOLEAN     shift, and go to state 40
    CHAR        shift, and go to state 41
    STRING      shift, and go to state 42
    IDENTIFIER  shift, and go to state 8

    block3                     go to state 128
    block4                     go to state 25
    block5                     go to state 26
    variable_declaration       go to state 30
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    typeid                     go to state 129
    identifier                 go to state 44


State 77

   13 block3: variable_declaration SEMICOLON • block4
   24 variable_declaration: variable_declaration SEMICOLON • variableid_list COLON type

    PROCEDURE   shift, and go to state 18
    FUNCTION    shift, and go to state 19
    BEGIN_TOK   shift, and go to state 20
    IDENTIFIER  shift, and go to state 8

    block4                     go to state 130
    block5                     go to state 26
    variableid_list            go to state 131
    proc_and_func_declaration  go to state 31
    proc_or_func               go to state 32
    identifier                 go to state 35


State 78

   15 block4: proc_and_func_declaration SEMICOLON • block5
   68 proc_and_func_declaration: proc_and_func_declaration SEMICOLON • proc_or_func

    PROCEDURE  shift, and go to state 18
    FUNCTION   shift, and go to state 19
    BEGIN_TOK  shift, and go to state 20

    block5        go to state 132
    proc_or_func  go to state 133


State 79

   26 variableid_list: variableid_list COMMA • identifier

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 134


State 80

   23 variable_declaration: VAR variableid_list COLON • type
